feat: add @arkade-os/sdk/adapters/realm entry point

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,8 @@
         "**/*.test.ts",
         "examples",
         "src/adapters/expo-db.ts",
+        "src/adapters/realm.ts",
+        "src/repositories/realm",
         "src/repositories/indexedDB/websqlAdapter.ts"
     ]
 }
